# cpp-template

./: .clang-tidy  CMakeLists.txt  Makefile  README.md  configure.sh
include/entities/: person.h
src/: main.cpp
src/entities/: person.cpp
tests/entities/: person_test.cpp
